fix(UI): fixed UI spacing and sizes

--- a/app/main.css
+++ b/app/main.css
@@ -99,7 +99,7 @@
 }
 
 @utility btn {
-  @apply flex w-full cursor-pointer items-center justify-center gap-2 rounded-xl bg-primary px-4 py-3 text-sm font-medium text-gray-50;
+  @apply flex w-full cursor-pointer items-center justify-center gap-2 rounded-xl bg-primary px-4 py-3 text-sm sm:text-base font-medium text-gray-50;
   box-shadow:
     hsla(0, 0%, 100%, 0.1) 0 0 0 1px inset,
     hsla(0, 0%, 100%, 0.15) 0 1px 0 0 inset,
